Fix blocking auth, wrong error statuses, and unbounded caches
api-gateway:
- Run bcrypt on Schedulers.boundedElastic(). The gateway is WebFlux, so
  hashing on an event loop thread stalled every other in-flight request
  through the gateway, not just the login being served.
- Pick a token validator by reading the header's alg instead of verifying
  as HMAC and using the resulting JwtException as a fall-through signal,
  so Keycloak requests no longer build a stack trace on their happy path.
  This only routes; each token still has to pass the validator it reaches.
- Derive the HMAC key with explicit UTF-8 rather than the platform default
  charset, so the same secret yields the same key on any machine.
- Log request paths rather than full URIs, and log the response line from
  doFinally so it survives an error or a client disconnect.

customer-service / order-service:
- Extend ResponseEntityExceptionHandler so Spring's own binding failures
  keep their 4xx status. A missing request param and an unparseable path
  variable were both answered with 500 before this.
- Stop returning raw exception text from the catch-all handler; that text
  is typically JDBC or Hibernate detail. It stays in the log.
- Add indexes on orders(customer_id) and orders(customer_id, product_id),
  which is what every read path in order-service filters on. At 300k rows
  the lookup drops from a ~14ms sequential scan to a ~0.06ms index scan.
- Back @Cacheable with Caffeine, bounded by size and TTL. With no provider
  on the classpath Spring falls back to a map that never evicts.
- Cache the by-product read under the same cache name, so the existing
  allEntries eviction covers it too. It was previously uncached while its
  sibling was cached, which let the two disagree after a write.
- Set open-in-view: false and turn off SQL logging by default.
- Make the comparators null-safe and mark the service methods
  transactional; tighten validation on Order.productId and quantity.

composite-service:
-